add_executable(SOn_test SOn_test.cpp)
target_link_libraries(SOn_test gtest_main)
target_link_libraries(SOn_test Eigen3::Eigen)
target_include_directories(SOn_test PRIVATE ${CERES_INCLUDE_DIRS})
target_link_libraries(SOn_test ${CERES_LIBRARIES})
add_test(NAME SOn COMMAND SOn_test)

add_executable(SOn_parameterization_test SOn_parameterization_test.cpp)
target_link_libraries(SOn_parameterization_test gtest_main)
target_link_libraries(SOn_parameterization_test Eigen3::Eigen)
target_include_directories(SOn_parameterization_test PRIVATE ${CERES_INCLUDE_DIRS})
target_link_libraries(SOn_parameterization_test ${CERES_LIBRARIES})
add_test(NAME SOn_parameterization COMMAND SOn_parameterization_test)

add_executable(frobenius_prior_test frobenius_prior_test.cpp)
target_link_libraries(frobenius_prior_test gtest_main)
target_link_libraries(frobenius_prior_test Eigen3::Eigen)
target_include_directories(frobenius_prior_test PRIVATE ${CERES_INCLUDE_DIRS})
target_link_libraries(frobenius_prior_test ${CERES_LIBRARIES})
add_test(NAME frobenius_prior COMMAND frobenius_prior_test)

add_executable(shonan_ceres_test shonan_ceres_test.cpp)
target_link_libraries(shonan_ceres_test gtest_main)
target_link_libraries(shonan_ceres_test Eigen3::Eigen)
target_include_directories(shonan_ceres_test PRIVATE ${CERES_INCLUDE_DIRS})
target_link_libraries(shonan_ceres_test ${CERES_LIBRARIES})
add_test(NAME shonan_ceres COMMAND shonan_ceres_test)

